--- a/vars/buildfarm.yml
+++ b/vars/buildfarm.yml
@@ -24,7 +24,10 @@ deployments:
     containers:
     - name: "android-sdk"
       image: "docker.io/aerogear/android-sdk:dev"
+  - name: "nagios"
+    containers:
+    - name: "nagios"
+      image: "docker.io/aerogear/digger-nagios:dev"
 
 macos_user: jenkins
-
 concurrent_android_builds: 5
